# LLM-supported-review-system

./: README.md  test  test.txt
.github/workflows/: auto-versioning.yml  auto_versioning.yml  read-PR.yml  run_pytest.yml
LLM/: README.md  README_LLM.md  llmkey  llmkey.pub  test_llama.py
Meetings/: Meeting 3.md  Meeting_2.md
Plans_for_Meetings/: Meeting_2.md
Research/: Jak github rozmawia z aplikacjami zewnętrznymi.md  PDM - komendy.md  click.md  pytest_info.md  test_sample.py
project/: example.py  pyproject.toml  setup.py
project/src/: setup.py
project/src/project/: __main__.py  check_json.py  llama_sample.py  prompt1.py  something.py  test_llama.py
project/tests/: test_check_json.py  test_llama.py
