[project]
name = "project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "KalBia", email = "340152@uwr.edu.pl"},
]
dependencies = [
    "jsons>=1.6.3",
    "requests>=2.31.0",
    "pytest>=8.1.1",
    "click>=8.1",
    "pydantic>=2.7.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
prompt1 = "python run project/src/project/prompt1.py"
